# parasolid_frustrum

./: CMakeLists.txt  frustrum.cpp  parasolid.h  readme.md
